[project]
name = "claudeai"
version = "0.1.0"
description = "Claude API for Python Developers - Webinar Materials"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.39.0",
    "voyageai>=0.3.0",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.8.0",
    "httpx>=0.27.0",
    "watermark>=2.5.0",
    "tqdm>=4.67.1",
]
